# texture_packer

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
app/: CMakeLists.txt  cli.hpp  gui.hpp
texture_packer/: CMakeLists.txt  main.cpp
texture_packer/include/texture_packer/: pack_settings.hpp  rect.hpp
texture_packer/src/: atlas.cpp  image_info.cpp  magic_image.hpp  sdl_image.hpp  texture_packer.cpp
texture_packer_app/: CMakeLists.txt  cli.cpp  cli.hpp  gui.cpp  gui.hpp  main.cpp
texture_packer_lib/: CMakeLists.txt
texture_packer_lib/include/texture_packer/: abstract_image.hpp  atlas.hpp  image.hpp  image_info.hpp  image_rect.hpp  pack_settings.hpp  rect.hpp  texture_packer.hpp  utils.hpp
texture_packer_lib/src/: atlas.cpp  image.cpp  image_info.cpp  magic_image.hpp  sdl_image.hpp  texture_packer.cpp  utils.cpp
